--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -1,13 +1,13 @@
 nav {background-color: #FFFFFF;
     padding: 10px;
     margin-bottom: 30px;}
-nav a {color: #F2CD84;}
+nav a {color: #332600;}
 nav a:hover {background-color: #FFF3CE;}
 
 body {font-family: Helvetica, sans-serif;
-    color: #846855;
+    color: #5d493c;
     background-color: #F4EDE4;}
-a {color: #6CA3C4}
+a {color: #336280}
 
 .quote {float: right;}
 h1, h2 {color:#4B3C32}
@@ -18,7 +18,7 @@ h1, h2 {color:#4B3C32}
      span {display:none;}
 }
 
-#skip { 
+a#skip { 
     position: absolute;
     left: -999px;
     background-color: orange;
