--- a/lab11/styles.css
+++ b/lab11/styles.css
@@ -5,9 +5,9 @@ nav a {color: #332600;}
 nav a:hover {background-color: #FFF3CE;}
 
 body {font-family: Helvetica, sans-serif;
-    color: #5d493c;
+    color: #4B3C32;
     background-color: #F4EDE4;}
-a {color: #336280}
+a {color: #1d3849}
 
 .quote {float: right;}
 h1, h2 {color:#4B3C32}
