--- a/project/project06/projectstyle.css
+++ b/project/project06/projectstyle.css
@@ -12,7 +12,7 @@ nav {background-color: #98745C;
 }
     
 nav a {color: #ffffff;}
-nav a:hover {background-color: #8ba7e0;}
+nav a:hover {background-color: #a3b6dd;}
 a {color:#526690}
 
 .logo { 
