--- a/project/project06/projectstyle.css
+++ b/project/project06/projectstyle.css
@@ -3,7 +3,7 @@ body {font-family: 'Montserrat', sans-serif;
     background-color:#EDEDED;
     margin: 50px;
 }
-nav {background-color: #98745C;
+nav {background-color: #7a5d4a;
     padding: 10px;
     margin-bottom: 30px;
     text-align: center;
