--- a/project/project07/projectstyle.css
+++ b/project/project07/projectstyle.css
@@ -47,3 +47,17 @@ footer div img {
     span {display:none;}
     img {max-width: 100%;}
 }
+.container {
+    animation: transitionIn 0.75s;
+}
+
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotateX(-10deg);
+    }
+    to {
+        opacity: 1;
+        transform: rotateX(0);
+    }
+}
